[package]
name = "bevy_spine"
version = "0.5.0"
edition = "2021"
description = "Spine plugin for Bevy utilizing rusty_spine"
homepage = "https://github.com/jabuwu/bevy_spine"
repository = "https://github.com/jabuwu/bevy_spine"
readme = "readme.md"
license-file = "LICENSE"
exclude = [
    "assets/*",
]

[dependencies]
rusty_spine = { path = "/Users/rqg/Playground/rusty_spine" }
bevy = { path = "/Users/rqg/Playground/bevy", default-features = false, features = ["bevy_render", "bevy_asset", "bevy_sprite"] }
glam = { version = "0.24", features = ["mint"] }
anyhow = "1.0"

[dev-dependencies]
lerp = "0.4"
bevy = { path = "/Users/rqg/Playground/bevy", default-features = true }
